--- a/geekbuying_clone/package.json
+++ b/geekbuying_clone/package.json
@@ -9,7 +9,10 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "bootstrap": "4.5.0",
+    "json-server": "^0.17.0",
     "react": "^18.1.0",
+    "react-bootstrap": "1.0.1",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
@@ -18,6 +21,7 @@
     "react-slick": "^0.29.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
